<resources>
    <string name="app_name">IFMSA El Salvador</string>

    <string name="name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="e_mail_hint">E-mail</string>
    <string name="ifmsa_logo_description">IFMSA LOGO</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="username_hint">Username</string>

    <string name="college_text">Universidad</string>
    <string name="year_text">Año actual:</string>
    <string name="selected_year_text">Año cursado: </string>

    <string-array name="colleges_array">
        <item>Universidad Dr. José Matías Delgado</item>
        <item>Universidad Evangélica de El Salvador</item>
        <item>Universidad Autónoma de Santa Ana</item>
    </string-array>

    <string-array name="years_array">
        <item>1°</item>
        <item>2°</item>
        <item>3°</item>
        <item>4°</item>
        <item>5°</item>
        <item>6°</item>
        <item>7°</item>
        <item>8°</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to bindViews -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username_login">Username</string>
    <string name="login_login_btn">Login</string>
    <string name="register_here_login">Register here</string>
    <string name="forgot_password_login">Forgot Password?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">@string/app_name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="androide_1">\'@Androide_1</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_comites">Comités</string>
    <string name="menu_proyectos">Proyectos</string>
    <string name="menu_solicitar_proyecto">Solicitar proyecto</string>
    <string name="user_photo_description">User photo</string>
    <string name="committee_photo_description">Committee photo</string>
    <string name="phone_number_hint">Phone number</string>

    <!--Strings related with emergin or error mesages in Toast/Snackbar messages -->
    <string name="field_empty_message">The fields must not be empty</string>
    <string name="password_match_message">Passwords must match</string>

    <!--TODO: Put these text in SharedPreferences name and key values -->
    <string name="sharedpreferences_name">log</string>
    <string name="sharedpreferences_key">token</string>

    <!--Projects class attributes-->
    <string name="project_class_id_attribute">_id</string>
    <string name="project_class_name_attribute">name</string>
    <string name="project_class_comitee_attribute">commitee</string>
    <string name="project_class_place_attribute">place</string>
    <string name="project_class_description_attribute">description</string>
    <string name="project_class_vacancies_attribute">vacancies</string>

</resources>
