<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"

    tools:context=".activities.LoginActivity">


    <include layout="@layout/logo_ifmsa_layout" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:src="@drawable/user_icon" />

            <EditText
                android:id="@+id/Username_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="25dp"
                android:layout_marginStart="4dp"
                android:hint="@string/username_login"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />
        </LinearLayout>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:src="@drawable/password_user" />

            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="25dp"
                android:hint="@string/password_hint"
                android:imeActionId="6"
                android:imeActionLabel="Log in"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
        </LinearLayout>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/boton_login"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/borde_de_btn"
        android:elevation="2dp"
        android:text="@string/login_login_btn"
        android:textColor="@color/indigo_500"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/register_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:text="@string/register_here_login"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center">

        <TextView
            android:id="@+id/forgot_pass_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:clickable="true"
            android:text="@string/forgot_password_login"

            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>